spacing issues carry on

--- a/css/main.css
+++ b/css/main.css
@@ -926,6 +926,10 @@ a:hover {
 	margin-top: 5em;
 }
 
+#project-goals-carry {
+	margin-bottom: 90px;
+}
+
 #project-goals-open {
 	margin-bottom: 127px;
     margin-top: .5em;
@@ -937,6 +941,10 @@ a:hover {
 
 #project-goals-bottom-star {
 	margin-top: 9em;
+}
+
+#project-goals-bottom-carry {
+	margin-top: 7.5em;
 }
 
 #process-header {
